docs-archive/apache-airflow-providers-celery/3.17.2/_sources/_api/airflow/providers/celery/executors/celery_executor_utils/index.rst.txt
airflow.providers.celery.executors.celery_executor_utils
========================================================

.. py:module:: airflow.providers.celery.executors.celery_executor_utils

.. autoapi-nested-parse::

   Utilities and classes used by the Celery Executor.

   Much of this code is expensive to import/load, be careful where this module is imported.



Attributes
----------

.. autoapisummary::

   airflow.providers.celery.executors.celery_executor_utils.log
   airflow.providers.celery.executors.celery_executor_utils.setproctitle
   airflow.providers.celery.executors.celery_executor_utils.CommandType
   airflow.providers.celery.executors.celery_executor_utils.OPERATION_TIMEOUT
   airflow.providers.celery.executors.celery_executor_utils.CELERY_FETCH_ERR_MSG_HEADER
   airflow.providers.celery.executors.celery_executor_utils.app
   airflow.providers.celery.executors.celery_executor_utils.send_task_to_executor


Classes
-------

.. autoapisummary::

   airflow.providers.celery.executors.celery_executor_utils.ExceptionWithTraceback
   airflow.providers.celery.executors.celery_executor_utils.BulkStateFetcher


Functions
---------

.. autoapisummary::

   airflow.providers.celery.executors.celery_executor_utils.get_celery_configuration
   airflow.providers.celery.executors.celery_executor_utils.create_celery_app
   airflow.providers.celery.executors.celery_executor_utils.on_celery_import_modules
   airflow.providers.celery.executors.celery_executor_utils.on_celery_worker_ready
   airflow.providers.celery.executors.celery_executor_utils.execute_workload
   airflow.providers.celery.executors.celery_executor_utils.execute_command
   airflow.providers.celery.executors.celery_executor_utils.send_workload_to_executor
   airflow.providers.celery.executors.celery_executor_utils.fetch_celery_task_state


Module Contents
---------------

.. py:data:: log

.. py:data:: setproctitle

.. py:data:: CommandType

.. py:data:: OPERATION_TIMEOUT

.. py:data:: CELERY_FETCH_ERR_MSG_HEADER
   :value: 'Error fetching Celery task state'


.. py:function:: get_celery_configuration()

   Get the Celery configuration dictionary.


.. py:function:: create_celery_app(team_conf)

   Create a Celery app, supporting team-specific configuration.

   :param team_conf: ExecutorConf instance with team-specific configuration, or global conf
   :return: Celery app instance


.. py:data:: app

.. py:function:: on_celery_import_modules(*args, **kwargs)

   Preload some "expensive" airflow modules once, so other task processes won't have to import it again.

   Loading these for each task adds 0.3-0.5s *per task* before the task can run. For long-running tasks this
   doesn't matter, but for short tasks this starts to be a noticeable impact.


.. py:function:: on_celery_worker_ready(*args, **kwargs)

.. py:function:: execute_workload(input)

.. py:function:: execute_command(command_to_exec)

   Execute command.


.. py:class:: ExceptionWithTraceback(exception, exception_traceback)

   Wrapper class used to propagate exceptions to parent processes from subprocesses.

   :param exception: The exception to wrap
   :param exception_traceback: The stacktrace to wrap


   .. py:attribute:: exception


   .. py:attribute:: traceback


.. py:function:: send_workload_to_executor(workload_tuple)

   Send workload to executor.

   This function is called in ProcessPoolExecutor subprocesses. To avoid pickling issues with
   team-specific Celery apps, we pass the team_name and reconstruct the Celery app here.


.. py:data:: send_task_to_executor

.. py:function:: fetch_celery_task_state(async_result)

   Fetch and return the state of the given celery task.

   The scope of this function is global so that it can be called by subprocesses in the pool.

   :param async_result: a tuple of the Celery task key and the async Celery object used
       to fetch the task's state
   :return: a tuple of the Celery task key and the Celery state and the celery info
       of the task


.. py:class:: BulkStateFetcher(sync_parallelism, celery_app = None)

   Bases: :py:obj:`airflow.utils.log.logging_mixin.LoggingMixin`


   Gets status for many Celery tasks using the best method available.

   If BaseKeyValueStoreBackend is used as result backend, the mget method is used.
   If DatabaseBackend is used as result backend, the SELECT ...WHERE task_id IN (...) query is used
   Otherwise, multiprocessing.Pool will be used. Each task status will be downloaded individually.


   .. py:attribute:: celery_app


   .. py:method:: get_many(async_results)

      Get status for many Celery tasks using the best method available.



